change fixed background for absolute overlay (fix z-index priority about screen reflexion)

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,7 +7,7 @@
 // 1 rem = 10 px
 $font-size: 62.5%; // 10px app / 16px default browser
 
-$background-width: 1380px; //rem
+$overlay-width: 1380px; //rem
 
 //$responsive-width-breakpoints : (1370px: 0.9, 1230px: 0.8, 1100px: 0.7, 960px: 0.6, 820px: 0.5, 690px: 0.4);
 $responsive-width-breakpoints : (1370px: 0.5, 690px: 0.4);
